--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,33 @@
-<div class="jumbotron">
+<!--<div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
     Music is the shit!
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+</div>-->
+
+<div class="jumbotron">
+  <h1>Step 1</h1>
+  <p class="lead">
+    Register with our system
+  </p>
+  <p><a class="btn btn-lg btn-success" ng-href="#">Register!</a></p>
+</div>
+
+<div class="jumbotron">
+  <h1>Step 2</h1>
+  <p class="lead">
+    Add your music services 
+  </p>
+  <p><a class="btn btn-lg btn-success" ng-href="#">Spotify</a></p><p><a class="btn btn-lg btn-success" ng-href="#">Deezer</a></p>
+</div>
+
+<div class="jumbotron">
+  <h1>Step 3</h1>
+  <p class="lead">
+    Get recommendations 
+  </p>
+</div>
   
 <!--</div>
 
