nav header active tab

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,7 @@
-<p>This is the about view.</p>
+<p>
+  The authors of this project are: M. Polderdijk,
+M.E. Gietema,
+E. Agterdenbos,
+T. van Vliet and
+G. Mak
+</p>
