--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,11 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow: scroll;
+}
+
 /* Space out content a bit */
 body {
   padding-top: 20px;
