spotify added + postmessage playing

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,7 +22,7 @@
   <p class="lead">
     Add your music services 
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Spotify</a></p><p><a class="btn btn-lg btn-success" ng-href="#">Deezer</a></p>
+  <p><a class="btn btn-lg btn-success" ng-click="login()">Spotify</a></p><p><a class="btn btn-lg btn-success" ng-href="#">Deezer</a></p>
 </div>
 
 <div class="jumbotron">
