--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,10 +26,10 @@
   <a ng-hide="user.spotifytoken && loginObj.user.id" ng-disabled="!loginObj.user.id || user.spotifytoken" class="btn btn-lg btn-success" href="#" ng-click="spotifylogin()">Spotify</a>
   <div ng-show="user.spotifytoken && loginObj.user.id">
     <img src="images/spotify.png" alt="Spotify" height="30"> {{user.spotify.id}} <span  class="glyphicon glyphicon-ok"></span>
-    <h3>User library</h3>
-    <span ng-repeat="song in user.spotifyUserLibrary.items">{{song.track.artists[0].name}} - {{song.track.name}}<br></span>
-    <h3>Playlists</h3>
-    <span ng-repeat="playlist in user.spotifyPlaylists.items">{{playlist.name}}<br></span>
+    <!--<h3>User library</h3>-->
+    <!--<span ng-repeat="song in user.spotifyUserLibrary.items">{{song.track.artists[0].name}} - {{song.track.name}}<br></span>-->
+    <!--<h3>Playlists</h3>-->
+    <!--<span ng-repeat="playlist in user.spotifyPlaylists.items">{{playlist.name}}<br></span>-->
   </div>
   <!--  <br><br>
     <a class="btn btn-lg btn-success" ng-href="#">Deezer</a>-->
@@ -40,7 +40,11 @@
   <p class="lead">
     <a class="btn btn-lg btn-success" ng-href="#" ng-disabled="!loginObj.user.id || !user.spotifytoken" ng-click="recommend()">Get music recommendations!</a>
   </p>
-  {{recommendations}}
+  <ul>
+    <li ng-repeat="recommendation in data">
+      {{recommendation}}
+    </li>
+  </ul>
 </div>
 
 <!--</div>
