--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,10 @@
 <p>
-  The authors of this project are: M. Polderdijk,
-M.E. Gietema,
-E. Agterdenbos,
-T. van Vliet and
-G. Mak
+  The authors of this project:
+  <ul>
+  <li>M. Polderdijk</li>
+<li>M.E. Gietema</li>
+<li>E. Agterdenbos</li>
+<li>T. van Vliet</li>
+<li>G. Mak</li>
+  </ul>
 </p>
