--- a/app/views/songs.html
+++ b/app/views/songs.html
@@ -1,7 +1,21 @@
-<p>
+
+<div class="spinner" ng-show="loading">
+  <div class="rect1"></div>
+  <div class="rect2"></div>
+  <div class="rect3"></div>
+  <div class="rect4"></div>
+  <div class="rect5"></div>
+</div>
+  <div ng-hide="loading">
+<h4>Songs</h4>
+    This page only shows 50 entries, but the search box below searches the whole database.
+    <form class="form-inline">
+      <input ng-model="query" type="text"
+             placeholder="Search" autofocus>
+    </form><br>
 <ul>
-  <li ng-repeat="song in songs">
-    {{song.artist}} - {{song.title}} <a ng-href="#/lyric/{{song.lyric_id}}">[lyric]</a>
+  <li ng-repeat="song in songs | filter:query | limitTo:50" class="animate">
+    <a ng-href="#/song/{{song.id}}">{{song.artist}} - {{song.title}}</a>
   </li>
 </ul>
-</p>
+  </div>
