add recommendations and big final update

--- a/app/views/clusters.html
+++ b/app/views/clusters.html
@@ -8,7 +8,7 @@
 </div>
   <div ng-hide="loading">
 <h4>Clusters</h4>
-    This page only shows 50 clusters, but the search box below searches the whole database.
+    This page only shows 50 clusters, but the search box below searches the whole database with {{clusters.length}} clusters.
     <form class="form-inline">
       <input ng-model="query" type="text"
              placeholder="Search" autofocus>
