add spotify player and new dist

--- a/app/views/cluster.html
+++ b/app/views/cluster.html
@@ -7,6 +7,7 @@
   <div class="rect5"></div>
 </div>
 <div ng-hide="loading">
+  <iframe class="pull-right" height="380" width="300" ng-src="{{url}}" frameborder="0" allowtransparency="true"></iframe>
 <h4>{{cluster.lingoLabel}}</h4>
   The songs included in this cluster are shown below<br><br>
 <ul>
