--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,7 @@
 
 <div class="jumbotron">
   <h1>Step 3</h1>
-  <p class="lead" ng-hide="clicked">
+  <p class="lead" ng-hide="clicked"><br>
     <a class="btn btn-lg btn-success" ng-disabled="!loginObj.user.id || !user.spotifytoken" ng-click="recommend()">Get music recommendations!</a>
   </p><br>
   <div class="spinner" ng-show="loading3">
@@ -47,13 +47,14 @@
     <div class="rect4"></div>
     <div class="rect5"></div>
   </div>
-  <div ng-hide="loading3">
-  <ul>
-    <li class="animate" ng-repeat="song in songs3 track by $index">
-      <a ng-href="#/song/{{song.id}}">{{song.artist}} - {{song.title}}</a>
-    </li>
-  </ul>
+  <div ng-hide="loading3 || !clicked">
+      <span class="animate" ng-repeat="song in songs3 track by $index">
+        <a ng-href="#/song/{{song.id}}">{{song.artist}} - {{song.title}}</a><br>
+      </span>
+    <br>
+    <iframe height="380" width="300" ng-src="{{spotify_url}}" frameborder="0" allowtransparency="true"></iframe>
   </div>
+
 </div>
 
 <!--</div>
