--- a/app/views/song.html
+++ b/app/views/song.html
@@ -7,6 +7,7 @@
   <div class="rect5"></div>
 </div>
 <div ng-hide="loading">
+  <iframe class="pull-right" ng-src="{{url}}" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
 <h4>{{song.artist}} - {{song.title}}</h4>
 
 <b>Source:</b> {{lyric.source}} <br>
