--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,7 +30,8 @@
     <!--<span ng-repeat="song in user.spotifyUserLibrary.items">{{song.track.artists[0].name}} - {{song.track.name}}<br></span>-->
     <!--<h3>Playlists</h3>-->
     <!--<span ng-repeat="playlist in user.spotifyPlaylists.items">{{playlist.name}}<br></span>-->
-  </div>
+  </div><br><br>
+  <a class="btn btn-lg btn-success" href="#" ng-click="deezerlogin()">Deezer</a>
   <!--  <br><br>
     <a class="btn btn-lg btn-success" ng-href="#">Deezer</a>-->
 </div>
