--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,15 +23,28 @@
   <p class="lead">
     Add your music services
   </p>
-  <a ng-hide="user.spotifytoken && loginObj.user.id" ng-disabled="!loginObj.user.id || user.spotifytoken" class="btn btn-lg btn-success" href="#" ng-click="spotifylogin()">Spotify</a>
+  <div ng-hide="user.spotifytoken && loginObj.user.id" >
+    <a ng-disabled="!loginObj.user.id || user.spotifytoken" class="btn btn-lg btn-success" href="#" ng-click="spotifylogin()">Spotify</a>
+    <br>
+  </div>
   <div ng-show="user.spotifytoken && loginObj.user.id">
     <img src="images/spotify.png" alt="Spotify" height="30"> {{user.spotify.id}} <span  class="glyphicon glyphicon-ok"></span>
     <!--<h3>User library</h3>-->
     <!--<span ng-repeat="song in user.spotifyUserLibrary.items">{{song.track.artists[0].name}} - {{song.track.name}}<br></span>-->
     <!--<h3>Playlists</h3>-->
     <!--<span ng-repeat="playlist in user.spotifyPlaylists.items">{{playlist.name}}<br></span>-->
-  </div><br><br>
-  <a class="btn btn-lg btn-success" href="#" ng-click="deezerlogin()">Deezer</a>
+  </div>
+  <br>
+  <div ng-hide="user.deezer.token && loginObj.user.id">
+    <a ng-disabled="!loginObj.user.id || user.deezer.token" class="btn btn-lg btn-success" href="#" ng-click="deezerlogin()">Deezer</a>
+  </div>
+  <div ng-show="user.deezer.token && loginObj.user.id">
+    <img src="images/deezer.png" alt="Deezer" height="30"> {{user.deezer.id}} <span  class="glyphicon glyphicon-ok"></span>
+    <!--<h3>User library</h3>-->
+    <!--<span ng-repeat="song in user.spotifyUserLibrary.items">{{song.track.artists[0].name}} - {{song.track.name}}<br></span>-->
+    <!--<h3>Playlists</h3>-->
+    <!--<span ng-repeat="playlist in user.spotifyPlaylists.items">{{playlist.name}}<br></span>-->
+  </div>
   <!--  <br><br>
     <a class="btn btn-lg btn-success" ng-href="#">Deezer</a>-->
 </div>
