--- a/app/views/clusters.html
+++ b/app/views/clusters.html
@@ -8,14 +8,16 @@
 </div>
   <div ng-hide="loading">
 <h4>Clusters</h4>
-    This page only shows 50 clusters, but the search box below searches the whole database with {{clusters.length}} clusters.
+    The Music Recommender currently contains {{clusters.length}} clusters.<br><br>
     <form class="form-inline">
       <input ng-model="query" type="text"
              placeholder="Search" autofocus>
     </form><br>
 <ul>
-  <li ng-repeat="cluster in clusters | filter:query | limitTo:50" class="animate">
+  <li ng-repeat="cluster in clusters | filter:query | pagination:this" class="faderChats">
     <a ng-href="#/clusters/{{cluster.id}}">{{cluster.lingoLabel}}</a>
   </li>
 </ul>
+    <pagination items-per-page="itemsPerPage" max-size="10" boundary-links="true" total-items="(clusters | filter:query).length" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
+    <br>
   </div>
